conserto de erros no css

--- a/styles/style.css
+++ b/styles/style.css
@@ -169,7 +169,6 @@
   font-size: 18px;
   font-weight: normal;
   margin-top: 20px;
-  margin-top: 20px;
 }
 
 .feynman{
@@ -212,7 +211,7 @@
   font-weight: normal;
   position: absolute;
   right:48px;
-  margin-top: 25%
+  margin-top: 25%;
 }
 
 .kaufman{
