--- a/styles/style.css
+++ b/styles/style.css
@@ -40,6 +40,8 @@
   line-height: 96px;
   font-size: 102px;
   font-weight: bold;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .header__subtitle{
@@ -50,11 +52,14 @@
   font-weight: normal;
   left: 64px;
   bottom: 30px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .header__link{
   text-decoration: none;
   color: #2F80ED;
+  display: block;
 }
 
 
@@ -84,7 +89,6 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  margin: 0 auto;
   padding: 100px 0 100px 0; 
 }
 
@@ -92,23 +96,30 @@
   display: flex;
   justify-content: space-between;
   width: 80%;
-  min-width: 784px;
-  gap: 25%; /*não se especifica o quanto ele deseja*/
 }
 
 .two-columns__brief{
-  min-width: 175px;
-  min-width: 160px;
+  width: 175px;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
   color: #2F80ED;
+  margin-top: 0; /*coloquei porque está dando margem*/
+}
+
+.two-columns__main-text{
+  width: 80%;
+  min-width: 784px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
 
 .two-columns__paragraph{
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
+  margin: 0;
 }
 
 /*Fim description*/
@@ -118,7 +129,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 40px;
+  margin-bottom: 100px;
 }
 
 .section__title{
@@ -140,8 +151,9 @@
 }
 
 .table{
+  padding: 0;
   margin: 0;
-  row-gap: 80px;
+  row-gap: 60px;
   display: flex;
   flex-wrap: wrap;
   max-width: 1100px;
@@ -220,13 +232,13 @@
 
 .kaufman{
   padding-top: 90px;
+  padding-bottom: 90px;
   position: relative;
   overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: #1F1F1F;
-  padding-bottom: 90px;
 }
 
 .section__title_theme_dark{
@@ -236,34 +248,29 @@
 
 .section__subtitle_theme_dark{
   color: white;
+  margin-bottom: 80px;
 }
 
 .table_theme_dark{
   color: white;
+  row-gap: 80px;
 }
 
 .table__cell_theme_dark {
   width: 200px;
   margin-right: 0;
   z-index: 1;
-  margin-bottom: 20px;
-  /*todas são diferentes ou não tem na table__cell*/
 }
 
 .table__heading_theme_dark{
-  color: white; /*eu já havia colocado color no pai*/
+  color: white;
   z-index: 1;
 }
 
 .table__text_dark{
-  color: white; /*eu já havia colocado color no pai*/
+  color: white; 
   z-index: 1;
-  /*as propriedades que o brief pede são as mesma da .table__heading
   margin: 0;
-  line-height: 1.15px;
-  font-size: 24px;
-  font-weight: bold;
-  */
 }
 
 .kaufman__triangle{
@@ -279,7 +286,7 @@
 .footer{
   background-color:#1F1F1F;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   min-height: 350px;
   padding: 60px 0 40px 0;
   box-sizing: border-box;
@@ -312,15 +319,16 @@
 
 .footer__column-heading{
   color: white;
-  margin-bottom: 20px;
   line-height: 30px;
   font-size: 18px;
   font-weight: bold;
+  margin: 0 0 20px 0;
 }
 
 .footer__list{
   list-style-type: none;
   padding-inline-start: 0px;
+  margin: 0;
 }
 
 .footer__column-links{
@@ -334,9 +342,7 @@
 }
 
 .footer__column_content_social{
-  display: flex;
-  flex-direction: row;
-  flex-wrap:nowrap;
+  row-gap: 30px; /*REVER*/
 }
 
 .footer__social-icon{
@@ -345,15 +351,12 @@
 }
 
 .footer__column_content_about {
-  color: white;
+  row-gap: 30px;
 }
 
 .footer__column{
-  width:400px;
-  display: block;
-  margin: 0;
-  flex-wrap: nowrap;
-  white-space: nowrap;
+  display: flex;
+  flex-direction: column;
 }
 
 
