--- a/styles/style.css
+++ b/styles/style.css
@@ -322,7 +322,7 @@
   line-height: 30px;
   font-size: 18px;
   font-weight: bold;
-  margin: 0 0 20px 0;
+  margin: 0;
 }
 
 .footer__list{
@@ -342,7 +342,7 @@
 }
 
 .footer__column_content_social{
-  row-gap: 30px; /*REVER*/
+  row-gap: 20px;
 }
 
 .footer__social-icon{
@@ -351,7 +351,7 @@
 }
 
 .footer__column_content_about {
-  row-gap: 30px;
+  row-gap: 20px;
 }
 
 .footer__column{
