--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,5 @@
+@import url(../vendor/normalize.css);
+@import url(../blocks/page/page.css);
 @import url(../blocks/cards/cards.css);
 @import url(../blocks/description/description.css);
 @import url(../blocks/digits/digits.css);
@@ -8,7 +10,6 @@
 @import url(../blocks/khan/khan.css);
 @import url(../blocks/logo/logo.css);
 @import url(../blocks/oakley/oakley.css);
-@import url(../blocks/page/page.css);
 @import url(../blocks/resources/resources.css);
 @import url(../blocks/rotation/rotation.css);
 @import url(../blocks/section-subtitle/section__subtitle.css);
