--- a/pages/index.css
+++ b/pages/index.css
@@ -1,25 +1,107 @@
+/* normalize.css */
 @import url(../vendor/normalize.css); 
+
+/* PAGE */
 @import url(../blocks/page/page.css);
-@import url(../blocks/content/content.css);
+
+/* HEADER */
 @import url(../blocks/header/header.css);
+@import url(../blocks/header/__link/header__link.css);
+@import url(../blocks/header/__main-ilustration/header__main-ilustration.css);
+@import url(../blocks/header/__square-pic/header__square-pic.css);
+@import url(../blocks/header/__subtitle/header__subtitle.css);
+@import url(../blocks/header/__title/header__title.css);
+
+/* DESCRIPTION */
 @import url(../blocks/description/description.css);
+
+/* DIGITS */
 @import url(../blocks/digits/digits.css);
+
+/* FEYMAN */
 @import url(../blocks/feyman/feyman.css);
+@import url(../blocks/feyman/__link/feynman__link.css);
+@import url(../blocks/feyman/__subtitle/feynman__subtitle.css);
+@import url(../blocks/feyman/__title/feynman__title.css);
+
+/* KAUFMAN */
 @import url(../blocks/kaufman/kaufman.css);
+@import url(../blocks/kaufman/__triangle/kaufman__triangle.css);
+
+/* FOOTER */
 @import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__author/footer__author.css);
+@import url(../blocks/footer/__column-heading/footer__column-heading.css);
+@import url(../blocks/footer/__column-links/footer__column-links.css);
+@import url(../blocks/footer/__column/footer__column.css);
+@import url(../blocks/footer/__column/__content/__copyright/footer__column_content_copyright.css);
+@import url(../blocks/footer/__column/__content/__social/footer__column_content_social.css);
+@import url(../blocks/footer/__column/__content/_about/footer__column_content_about.css);
+@import url(../blocks/footer/__columns/footer__columns.css);
+@import url(../blocks/footer/__list/footer__list.css);
+@import url(../blocks/footer/__logo/footer__logo.css);
+@import url(../blocks/footer/__social-icon/footer__social-icon.css);
+
+/* LOGO */
 @import url(../blocks/logo/logo.css);
+@import url(../blocks/logo/_place/logo_place_header.css);
+
+/* TITLE */
 @import url(../blocks/section-title/section-title.css);
+@import url(../blocks/section-title/theme/section__title_theme_dark.css);
+
+/* SUBTITLE */
 @import url(../blocks/section-subtitle/section-subtitle.css);
+@import url(../blocks/section-subtitle/theme/section__subtitle_theme_dark.css);
+
+/* TABLE */
 @import url(../blocks/table/table.css);
+@import url(../blocks/table/__cell/table__cell.css);
+@import url(../blocks/table/__heading/table__heading.css);
+@import url(../blocks/table/__text/table__text.css);
+@import url(../blocks/table/theme/table_theme_dark.css);
+
+/* TWO-COLUMNS */
 @import url(../blocks/two-columns/two-columns.css);
+@import url(../blocks/two-columns/__brief/two-columns__brief.css);
+@import url(../blocks/two-columns/__main-text/two-columns__main-text.css);
+@import url(../blocks/two-columns/__paragraph/two-columns__paragraph.css);
+
+/* TECHNIQUES */
 @import url(../blocks/techniques/techniques.css);
 
+/* CARDS */
 @import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__image/cards__image.css);
+@import url(../blocks/cards/__item/cards__item.css);
+@import url(../blocks/cards/__text/cards__text.css);
+@import url(../blocks/cards/__title/cards__title.css);
 
-
+/* VIDEOS */
 @import url(../blocks/video/video.css);
+@import url(../blocks/videos/__iframe/video__iframe.css);
+@import url(../blocks/videos/__iframes/video__iframes.css);
+
+/* OAKLEY */
 @import url(../blocks/oakley/oakley.css);
+
+/* KHAN */
 @import url(../blocks/khan/khan.css);
+@import url(../blocks/khan/__author/khan__author.css);
+@import url(../blocks/khan/__book-container/khan__book-container.css);
+@import url(../blocks/khan/__book-pic/khan__book-pic.css);
+@import url(../blocks/khan/__buy-link/khan__buy-link.css);
+@import url(../blocks/khan/__container/khan__container.css);
+@import url(../blocks/khan/__quote-author-subline/khan__quote-author-subline.css);
+@import url(../blocks/khan/__quote-author/khan__quote-author.css);
+@import url(../blocks/khan/__quote/khan__quote.css);
+@import url(../blocks/khan/__title/khan__title.css);
+
+/* RESOURCES */
 @import url(../blocks/resources/resources.css);
+@import url(../blocks/resources/__logo-zone/resources__logo-zone.css);
+@import url(../blocks/resources/__logo/resources__logo.css);
+
+/* ROTATION */
 @import url(../blocks/rotation/rotation.css);
 
