--- a/blocks/feyman/feynman.css
+++ b/blocks/feyman/feynman.css
@@ -1,6 +1,6 @@
 .feynman{
   position: relative;
-  background-image: url(../images/feynman.png);
+  background-image: url(../../images/feynman.png);
   background-repeat: no-repeat;
   background-position: left bottom;
   display: flex;
