--- a/pages/index.css
+++ b/pages/index.css
@@ -4,6 +4,14 @@
 /* PAGE */
 @import url(../blocks/page/page.css);
 
+/* TITLE */
+@import url(../blocks/section-title/section__title.css);
+@import url(../blocks/section-title/theme/section__title_theme_dark.css);
+
+/* SUBTITLE */
+@import url(../blocks/section-subtitle/section__subtitle.css);
+@import url(../blocks/section-subtitle/theme/section__subtitle_theme_dark.css);
+
 /* HEADER */
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__link/header__link.css);
@@ -15,14 +23,11 @@
 /* DESCRIPTION */
 @import url(../blocks/description/description.css);
 
-/* DIGITS */
-@import url(../blocks/digits/digits.css);
-
 /* FEYMAN */
-@import url(../blocks/feyman/feyman.css);
-@import url(../blocks/feyman/__link/feynman__link.css);
-@import url(../blocks/feyman/__subtitle/feynman__subtitle.css);
+@import url(../blocks/feyman/feynman.css);
 @import url(../blocks/feyman/__title/feynman__title.css);
+@import url(../blocks/feyman/__subtitle/feynman__subtitle.css);
+@import url(../blocks/feyman/__link/feynman__link.css);
 
 /* KAUFMAN */
 @import url(../blocks/kaufman/kaufman.css);
@@ -46,13 +51,8 @@
 @import url(../blocks/logo/logo.css);
 @import url(../blocks/logo/_place/logo_place_header.css);
 
-/* TITLE */
-@import url(../blocks/section-title/section-title.css);
-@import url(../blocks/section-title/theme/section__title_theme_dark.css);
-
-/* SUBTITLE */
-@import url(../blocks/section-subtitle/section-subtitle.css);
-@import url(../blocks/section-subtitle/theme/section__subtitle_theme_dark.css);
+/* DIGITS */
+@import url(../blocks/digits/digits.css);
 
 /* TABLE */
 @import url(../blocks/table/table.css);
@@ -78,9 +78,9 @@
 @import url(../blocks/cards/__title/cards__title.css);
 
 /* VIDEOS */
-@import url(../blocks/video/video.css);
-@import url(../blocks/videos/__iframe/video__iframe.css);
+@import url(../blocks/videos/video.css);
 @import url(../blocks/videos/__iframes/video__iframes.css);
+@import url(../blocks/videos/__iframe/video__iframe.css);
 
 /* OAKLEY */
 @import url(../blocks/oakley/oakley.css);
@@ -104,4 +104,3 @@
 
 /* ROTATION */
 @import url(../blocks/rotation/rotation.css);
-
