--- a/pages/index.css
+++ b/pages/index.css
@@ -1,107 +1,112 @@
-/* normalize.css */
-@import url(../vendor/normalize.css); 
+/*Normalize.css*/
+@import url(../vendor/normalize.css);
 
-/* PAGE */
+/*page*/
 @import url(../blocks/page/page.css);
 
-/* SECTION-TITLE */
-@import url(../blocks/section-title/section-title.css);
-@import url(../blocks/section-title/theme/section-title_theme_dark.css);
+/*root*/
+@import url(../blocks/root/root.css);
 
-/* SECTION-SUBTITLE */
-@import url(../blocks/section-subtitle/section-subtitle.css);
-@import url(../blocks/section-subtitle/theme/section-subtitle_theme_dark.css);
+/*Rotation*/
+@import url(../blocks/rotation/rotation.css);
 
-/* HEADER */
+/*Cards*/
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__image/cards__image.css);
+@import url(../blocks/cards/__item/cards__item.css);
+@import url(../blocks/cards/__title/cards__title.css);
+@import url(../blocks/cards/__description/cards__description.css);
+
+/*Cabeçalho*/
 @import url(../blocks/header/header.css);
+@import url(../blocks/header/__title/header__title.css);
 @import url(../blocks/header/__link/header__link.css);
 @import url(../blocks/header/__main-ilustration/header__main-ilustration.css);
-@import url(../blocks/header/__square-pic/header__square-pic.css);
+@import url(../blocks/header/__square/header__square.css);
 @import url(../blocks/header/__subtitle/header__subtitle.css);
-@import url(../blocks/header/__title/header__title.css);
 
-/* DESCRIPTION */
-@import url(../blocks/description/description.css);
-
-/* FEYMAN */
-@import url(../blocks/feyman/feynman.css);
-@import url(../blocks/feyman/__title/feynman__title.css);
-@import url(../blocks/feyman/__subtitle/feynman__subtitle.css);
-@import url(../blocks/feyman/__link/feynman__link.css);
-
-/* KAUFMAN */
-@import url(../blocks/kaufman/kaufman.css);
-@import url(../blocks/kaufman/__triangle/kaufman__triangle.css);
-
-/* FOOTER */
-@import url(../blocks/footer/footer.css);
-@import url(../blocks/footer/__author/footer__author.css);
-@import url(../blocks/footer/__column-heading/footer__column-heading.css);
-@import url(../blocks/footer/__column-links/footer__column-links.css);
-@import url(../blocks/footer/__column/footer__column.css);
-@import url(../blocks/footer/__column/__content/__copyright/footer__column_content_copyright.css);
-@import url(../blocks/footer/__column/__content/__social/footer__column_content_social.css);
-@import url(../blocks/footer/__column/__content/_about/footer__column_content_about.css);
-@import url(../blocks/footer/__columns/footer__columns.css);
-@import url(../blocks/footer/__list/footer__list.css);
-@import url(../blocks/footer/__logo/footer__logo.css);
-@import url(../blocks/footer/__social-icon/footer__social-icon.css);
-
-/* LOGO */
+/*Logo*/
 @import url(../blocks/logo/logo.css);
-@import url(../blocks/logo/_place/logo_place_header.css);
+@import url(../blocks/logo/_place_header/logo_place_header.css);
 
-/* DIGITS */
+/*Description*/
+@import url(../blocks/description/description.css);
+/*Digits*/
 @import url(../blocks/digits/digits.css);
 
-/* TABLE */
+/*Table*/
 @import url(../blocks/table/table.css);
 @import url(../blocks/table/__cell/table__cell.css);
 @import url(../blocks/table/__heading/table__heading.css);
 @import url(../blocks/table/__text/table__text.css);
-@import url(../blocks/table/theme/table_theme_dark.css);
+@import url(../blocks/table/_theme_dark/table__theme_dark.css);
+@import url(../blocks/table/__cell/_theme_dark/table__cell_theme_dark.css);
+@import url(../blocks/table/__heading/_theme_dark/table__heading_theme_dark.css);
+@import url(../blocks/table/__text/_theme_dark/table__text_theme_dark.css);
 
-/* TWO-COLUMNS */
+/*Two*/
 @import url(../blocks/two-columns/two-columns.css);
 @import url(../blocks/two-columns/__brief/two-columns__brief.css);
 @import url(../blocks/two-columns/__main-text/two-columns__main-text.css);
 @import url(../blocks/two-columns/__paragraph/two-columns__paragraph.css);
 @import url(../blocks/two-columns/__span-accent/two-columns__span-accent.css);
 
-/* TECHNIQUES */
+/*Tecniques*/
 @import url(../blocks/techniques/techniques.css);
 
-/* CARDS */
-@import url(../blocks/cards/cards.css);
-@import url(../blocks/cards/__image/cards__image.css);
-@import url(../blocks/cards/__item/cards__item.css);
-@import url(../blocks/cards/__text/cards__text.css);
-@import url(../blocks/cards/__title/cards__title.css);
+/*Video*/
+@import url(../blocks/video/video.css);
+@import url(../blocks/video/__iframe/video__iframe.css);
+@import url(../blocks/video/__iframes/video__iframes.css);
 
-/* VIDEOS */
-@import url(../blocks/videos/video.css);
-@import url(../blocks/videos/__iframes/video__iframes.css);
-@import url(../blocks/videos/__iframe/video__iframe.css);
-
-/* OAKLEY */
+/*Oakley*/
 @import url(../blocks/oakley/oakley.css);
 
-/* KHAN */
-@import url(../blocks/khan/khan.css);
-@import url(../blocks/khan/__author/khan__author.css);
-@import url(../blocks/khan/__book-container/khan__book-container.css);
-@import url(../blocks/khan/__book-pic/khan__book-pic.css);
-@import url(../blocks/khan/__buy-link/khan__buy-link.css);
-@import url(../blocks/khan/__container/khan__container.css);
-@import url(../blocks/khan/__quote-author-subline/khan__quote-author-subline.css);
-@import url(../blocks/khan/__quote-author/khan__quote-author.css);
-@import url(../blocks/khan/__quote/khan__quote.css);
-@import url(../blocks/khan/__title/khan__title.css);
+/*Feynman*/
+@import url(../blocks/feynman/feynman.css);
+@import url(../blocks/feynman/__image/feyman__image.css);
+@import url(../blocks/feynman/__link/feynman__link.css);
+@import url(../blocks/feynman/__subtitle/feynman__subtitle.css);
+@import url(../blocks/feynman/__title/feynman__title.css);
 
-/* RESOURCES */
+/*Triangle*/
+@import url(../blocks/kaufman/kaufman.css);
+@import url(../blocks/kaufman/__triangle/kaufman__triangle.css);
+
+/*Section Legends*/
+@import url(../blocks/section-subtitle/section-subtitle.css);
+@import url(../blocks/section-subtitle/_theme_dark/section-subtitle_theme_dark.css);
+
+/*Section Title*/
+@import url(../blocks/section-title/section-title.css);
+@import url(../blocks/section-title/_theme_dark/section-title_theme_dark.css);
+
+/*Footer*/
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__columns/footer__columns.css);
+@import url(../blocks/footer/__column_content_copyright/footer__column_content_copyright.css);
+@import url(../blocks/footer/__logo_place_footer/footer__logo_place_footer.css);
+@import url(../blocks/footer/__author/footer__author.css);
+@import url(../blocks/footer/__list/footer__list.css);
+@import url(../blocks/footer/__social-icons/footer__social-icons.css);
+@import url(../blocks/footer/__column-heading/footer__column-heading.css);
+@import url(../blocks/footer/__column-link/footer__column-link.css);
+@import url(../blocks/footer/__column_content_about/__column_content_about.css);
+@import url(../blocks/footer/footer__column_content_social/footer__column_content_social.css);
+
+/*Resources*/
 @import url(../blocks/resources/resources.css);
 @import url(../blocks/resources/__logo-zone/resources__logo-zone.css);
 @import url(../blocks/resources/__logo/resources__logo.css);
 
-/* ROTATION */
-@import url(../blocks/rotation/rotation.css);
+/*Khan*/
+@import url(../blocks/khan/khan.css);
+@import url(../blocks/khan/__quote/khan__quote.css);
+@import url(../blocks/khan/__title/khan__title.css);
+@import url(../blocks/khan/__quote-author-subline/khan__quote-author-subline.css);
+@import url(../blocks/khan/__author/khan__author.css);
+@import url(../blocks/khan/__quote-author/khan__quote-author.css);
+@import url(../blocks/khan/__container/khan__container.css);
+@import url(../blocks/khan/__buy-link/khan__buy-link.css);
+@import url(..//blocks/khan/__book-pic/khan__book-pic.css);
+@import url(../blocks/khan/__book-container/khan__book-container.css);
